# deepmoat

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  skills-lock.json  不要的  价值筛选.md  有用的总结.md  简单筛选.md  财务小卡片.js  面试语音转录的结构化总结.md
.claude/: settings.local.json
.obsidian/: workspace.json
.vercel/: project.json
Clippings/: 宇树科技 文档中心.md
agents/: 分析师智能体.md  参考报告.md  排雷分析.md
app/: config.py  database.py  main.py
fe/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  unocss.config.ts  vite.config.ts
fe/src/: App.vue  (+3 more)
outputs/: 002001-SZ-report.md  300274-SZ-阳光电源-20260414.md  605499-SH-东鹏饮料-20260414.md  a_share_watchlist_20260430_config.json  a_share_watchlist_20260430_report.md  a_share_watchlist_20260430_summary.json  a_share_watchlist_20260430_watchlist.csv  analysis_600887_伊利股份_2604152243.md  balance_000513.SZ.csv  cashflow_000513.SZ.csv  codex_context_handoff_20260513.md  daily_000513.SZ.csv  high-growth-from-screen-20260415-pe25.csv  indicator_000513.SZ.csv  peer_002001_新和成_2604152344.md  peer_605117_德业股份_2604160024.md  screen-roe12-mv100-low-valuation-20260415-shortlist.csv  screen-roe12-mv100-low-valuation-20260415-strict.csv  screen-roe12-mv100-low-valuation-20260415.csv  screen-roe12-mv100-low-valuation-20260415.json  screener_recent_smallcap_founder_mgmt_proxy_20260420.csv  screener_recent_smallcap_founder_mgmt_proxy_hits_20260420.csv  skill-12-report--605499-SH--东鹏饮料--20260415-1721--report.md  skill-analysis--300274-SZ--阳光电源--20260415-1531--dialogue.md  sungrow_segment_2025Q4_detail.csv  (+13 more)
(+841 files in other folders)
